chore: manage avro4k dep in parent